[package]
name = "ship_game_server"
version = "0.1.0"
edition = "2021"
authors = ["Ship Game Team"]
description = "Authoritative game server for multiplayer ship battle royale"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "sync", "macros", "rt-multi-thread", "time"] }

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "compression-gzip", "trace", "timeout"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for Supabase/external APIs  
reqwest = { version = "0.11", features = ["json", "native-tls"], default-features = false }

# Cryptography for Stripe webhook verification
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Base64 for JWT
base64 = "0.22"

# IDs
uuid = { version = "1.6", features = ["v4", "serde"] }

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Environment
dotenvy = "0.15"

# Utilities
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
parking_lot = "0.12"
rand = "0.8"
rand_chacha = "0.3"
futures = "0.3"
bytes = "1.5"

# Rate limiting
governor = "0.6"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
